tests/sources/invalid/classes/type_method_call_arg_count.fire
// Semantic error: 'Type.staticMethod(...)' called with the wrong number of
// arguments.

class Utils {
    static fn identity(x: int32) -> int32 {
        return x;
    }
}

fn type_method_call_arg_count() -> void {
    y: int32 = Utils.identity(1, 2);  //~ ERROR FS-SEM-0010 @22
}
